fix(sidebar-counters): Badge position when collapsed
When the number of branches or pull request was too large, the numbers
would interfere with the SVG icons of the sidebar links if it was
collapsed. Now the badge has been positioned slightly lower so that this
doesn't happen.

Fixes #301

--- a/src/sidebar-counters/sidebar-counters.css
+++ b/src/sidebar-counters/sidebar-counters.css
@@ -1,6 +1,7 @@
 .__rbb-badge {
     position: absolute;
     right: 4px;
+    bottom: -1px;
 }
 
 .__rbb-badge-counter {
